[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Player/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/Spawner/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/Backgrounds/bgHolder.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scenes/Player/FuelGauge.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Scenes/Backgrounds/PlanetHolder.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Music/MainTheme.wav" type="AudioStream" id=7]
[ext_resource path="res://src/Scenes/Levels/TestLevel.gd" type="Script" id=8]
[ext_resource path="res://src/Scenes/WinScreen/FadeIn.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/Symtext.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[node name="TestLevel" type="Node2D"]
script = ExtResource( 8 )
scene = "MainMenu"

[node name="LevelNameText" type="RichTextLabel" parent="."]
margin_left = 41.9661
margin_top = 32.0023
margin_right = 194.966
margin_bottom = 64.0023
custom_fonts/normal_font = SubResource( 1 )
text = "Test Words"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawner" parent="." instance=ExtResource( 3 )]

[node name="bgHolder" parent="." instance=ExtResource( 4 )]
z_index = -100

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 279.085, 182.434 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="FuelGauge" parent="." instance=ExtResource( 5 )]
margin_left = 33.0
margin_top = 337.0
margin_right = 43.0
margin_bottom = 347.0

[node name="PlanetHolder" parent="." instance=ExtResource( 6 )]

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0
pitch_scale = 0.8
autoplay = true

[node name="FadeInOut" parent="." instance=ExtResource( 9 )]

[node name="ChangeSceneTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="LevelNameTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="LevelNameTween" type="Tween" parent="."]

[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
[connection signal="timeout" from="LevelNameTimer" to="." method="_on_LevelNameTimer_timeout"]

[editable path="Spawner"]
